samples/_failures_safe/1761518111_beac24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_feb97418.c: In function ‘main’:
./samples/SAFE/__tmp_feb97418.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
